@@ -1,6 +1,6 @@
 <?php
 
-require '../mimedecode.php';
+require_once '../mimedecode.php';
 
 class postiefunctions2Test extends PHPUnit_Framework_TestCase {
 
