@@ -18,7 +18,8 @@ Attachments are now processed in the order they were attached.
 = 1.5.1 (future)
 * Turned on POP3 debug logging if POSTIE_DEBUG is TRUE.
 * Disable autocomplete on some setup fields
-* Fixed a bug where confirmation emails were not being sent to authors
+* Fixed bug where confirmation emails were not being sent to authors
+* Fixed bug where post were not saved if the default admin user didn't exist and the from user was not a WordPress user
 
 = 1.5.0 (2013.04.05) =
 * Apply Postie Time Correction to date: command
